Change console connection retries to be a little more robust (Bernhard Kaindl)

--- a/AUTHORS
+++ b/AUTHORS
@@ -25,6 +25,7 @@ Further patches have been submitted by:
   Mark Johnson <johnson-dot-nh-at-gmail-dot-com>
   Cole Robinson <crobinso-at-redhat-dot-com>
   Alexander Todorov <atodorov-at-redhat-dot-com>
+  Bernhard Kaindl <bk-at-suse-dot-de>
 
   <...send a patch & get your name here...>
 
