Fixed population of bridge network devices to separate label from device name (Eduardo Habkost)

--- a/AUTHORS
+++ b/AUTHORS
@@ -26,6 +26,7 @@ Further patches have been submitted by:
   Cole Robinson <crobinso-at-redhat-dot-com>
   Alexander Todorov <atodorov-at-redhat-dot-com>
   Bernhard Kaindl <bk-at-suse-dot-de>
+  Eduardo Habkost <ehabkost-at-redhat-dot-com>
 
   <...send a patch & get your name here...>
 
