Move connection state management into vmmConnection class so there is always a vmmConnection object even for disconnected connections. The vmmManager class listens for signals in vmmEngine and vmmConnection to see when new connections are added, existing ones removed, and the connection state changes

--- a/AUTHORS
+++ b/AUTHORS
@@ -30,4 +30,6 @@ Further patches have been submitted by:
 
   <...send a patch & get your name here...>
 
+Also lots of translations from the Fedora translation team. See
+the individual .po files for the translators.
 
