--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,17 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.5.1
+-------------
+
+This release improves upon the remote management capabilities. It can
+now tunnel connections to the VNC server over SSH. It avoids prompting
+for SSH passwords on the console. Handling of VNC connections & retries
+is made more robust. There is support for changing CDROM media on the
+fly (requires suitably updated libvirt). There is ability to PXE boot
+install fullyvirtualized guests. Connetions to hypervisors are opened
+in the background to avoid blocking the whole UI.
+
 Release 0.5.0
 -------------
 
