Update from Polish translator

--- a/po/pl.po
+++ b/po/pl.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-25 12:00-0400\n"
-"PO-Revision-Date: 2007-09-01 15:26+0200\n"
+"PO-Revision-Date: 2007-09-27 10:00+0200\n"
 "Last-Translator: Piotr Drąg <raven@pmail.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -1453,9 +1453,8 @@ msgid "_Kernel parameters:"
 msgstr "_Parametry jądra:"
 
 #: ../src/vmm-create.glade.h:126
-#, fuzzy
 msgid "_Network PXE boot"
-msgstr "Si_eć:"
+msgstr "Sieciowe uruchamia_nie PXE"
 
 #: ../src/vmm-create.glade.h:128
 msgid "_Paravirtualized:"
@@ -1933,9 +1932,8 @@ msgid "Disconnected"
 msgstr "Rozłączony"
 
 #: ../../po/../src/virtManager/connection.py:766
-#, fuzzy
 msgid "Connecting"
-msgstr "Połączenie:"
+msgstr "Łączenie"
 
 #: ../../po/../src/virtManager/connection.py:768
 #: ../../po/../src/virtManager/host.py:193
@@ -1949,7 +1947,7 @@ msgstr "Deaktywuj"
 
 #: ../../po/../src/virtManager/connection.py:772
 msgid "Unknown"
-msgstr ""
+msgstr "Nieznane"
 
 #: ../../po/../src/virtManager/createnet.py:97
 #: ../../po/../src/virtManager/createnet.py:255
@@ -2439,16 +2437,18 @@ msgstr "Nie wyświetlaj tego powiadomienia w przyszłości"
 #: ../../po/../src/virtManager/console.py:241
 #: ../../po/../src/virtManager/console.py:326
 msgid "Guest not running"
-msgstr ""
+msgstr "Gość nie jest uruchomiony"
 
 #: ../../po/../src/virtManager/console.py:244
 msgid "Guest has crashed"
-msgstr ""
+msgstr "Gość się zawiesił"
 
 #: ../../po/../src/virtManager/console.py:258
 msgid ""
 "TCP/IP error: VNC connection to hypervisor host got refused or disconnected!"
 msgstr ""
+"Błąd TCP/IP: połączenie VNC do hosta nadzorcy zostało odrzucone lub "
+"rozłączone!"
 
 #: ../../po/../src/virtManager/console.py:336
 msgid "Console not configured for guest"
@@ -2591,34 +2591,17 @@ msgid " - The Xen service has been started\n"
 msgstr " - Usługa Xen została uruchomiona\n"
 
 #: ../../po/../src/virtManager/manager.py:987
-#, fuzzy
 msgid ""
 "Unable to open a connection to the libvirt management daemon.\n"
 "\n"
 msgstr ""
-"Nie można otworzyć połączenia z demonem zarządzania QEMU.\n"
+"Nie można otworzyć połączenia z demonem zarządzania libvirt.\n"
 "\n"
 
 #: ../../po/../src/virtManager/manager.py:989
-#, fuzzy
 msgid " - The 'libvirtd' daemon has been started\n"
-msgstr " - Demon \"libvirt_qemud\" został uruchomiony\n"
+msgstr " - Demon \"libvirtd\" został uruchomiony\n"
 
 #: ../../po/../src/virtManager/manager.py:991
 msgid "Virtual Machine Manager Connection Failure"
 msgstr "Połączenie menedżera maszyn wirtualnych nie powiodło się"
-
-#~ msgid "View Select"
-#~ msgstr "Wybór widoku"
-
-#~ msgid "Unable to open connection to hypervisor '%s'"
-#~ msgstr "Nie można otworzyć połączenia z nadzorcą \"%s\""
-
-#~ msgid "Console was disconnected from guest"
-#~ msgstr "Konsola została rozłączona od gościa"
-
-#~ msgid "Console not available for inactive guest"
-#~ msgstr "Konsola nie jest dostępna dla nieaktywnego gościa"
-
-#~ msgid "Connected"
-#~ msgstr "Połączony"
